monitor-api/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orakl-monitor-api
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
spec:
  ingressClassName: ""
  rules:
    - host: monitor-api.orakl.bisonai.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orakl-monitor-api
                port:
                  number: 8888
